--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <html>
 <head> welcome to my football world </head>
 <body>
-<marquee scroll amount "10">
-  <img src="https://ichef.bbci.co.uk/images/ic/480x270/p05394v7.jpg"></img>
+<marquee scroll amount "10"></marquee>
+<img src="https://ichef.bbci.co.uk/images/ic/480x270/p05394v7.jpg"></img>
+</body>
+</html>
 
-   
+
+  
