--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head> welcome to my football world </head>
 <body>
 <marquee scroll amount "10"></marquee>
-<img src="https://ichef.bbci.co.uk/images/ic/480x270/p05394v7.jpg"></img>
+<img src="https://ichef.bbci.co.uk/images/ic/480x270/p05394v7.jpg" height="100" width="500" ></img>
 </body>
 </html>
 
