--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
-<head> welcome to my football world </head>
+<head></head>
 <body>
-<marquee scroll amount "10"></marquee>
-<img src="https://ichef.bbci.co.uk/images/ic/480x270/p05394v7.jpg" height="100" width="500" ></img>
+<marquee scroll amount "10">welcome to my football world</marquee>
+<img src="https://ichef.bbci.co.uk/images/ic/480x270/p05394v7.jpg" height="250" width="1000" ></img>
 </body>
 </html>
 
