--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <html>
 <head></head>
 <body>
-<marquee scroll amount="10">welcome to my football world</marquee>
-<img src="https://ichef.bbci.co.uk/images/ic/480x270/p05394v7.jpg" height="250" width="1000" ></img>
+  <marquee scrollamount="10"> <h1> welcome to my football world </h1> </marquee>
+<br>
+<br>
+<br>
+<img src="https://ichef.bbci.co.uk/images/ic/480x270/p05394v7.jpg" height="250" width="500" ></img>
 </body>
 </html>
 
