--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
-<head></head>
+<head><h1> welcome to my football world</h1></head>
 <body>
-  <marquee scrollamount="10"> <h1> welcome to my football world </h1> </marquee>
+<marquee scrollamount="10"></marquee>
 <br>
 <br>
 <br>
