--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head><h1> welcome to my football world</h1></head>
 <body>
 <marquee scrollamount="10"></marquee>
+bg color="blue"
 <br>
 <br>
 <br>
