--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <html>
 <head><h1> welcome to my football world</h1></head>
-<body>
+<body bgcolor="blue">
 <marquee scrollamount="10"></marquee>
-<bg color="blue">
 <br>
 <br>
 <br>
-<img src="https://ichef.bbci.co.uk/images/ic/480x270/p05394v7.jpg" height="1000" width="1000" ></img>
+<img src="https://ichef.bbci.co.uk/images/ic/480x270/p05394v7.jpg" height="650" width="650" ></img>
 </body>
 </html>
 
