--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head><h1> welcome to my football world</h1></head>
-<body bgcolor="blue">
+<body bgcolor="#4286f4">
 <marquee scrollamount="10"></marquee>
 <br>
 <br>
