--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <br>
 <br>
 <br>
-<img src="https://ichef.bbci.co.uk/images/ic/480x270/p05394v7.jpg" height="300" width="650" ></img>
+<img src="https://ichef.bbci.co.uk/images/ic/480x270/p05394v7.jpg" height="30%" width="40%" ></img>
 </body>
 </html>
 
