--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <br>
 <br>
 <br>
-<img src="https://ichef.bbci.co.uk/images/ic/480x270/p05394v7.jpg" height="200"width="200" ></img>
+<img src="https://ichef.bbci.co.uk/images/ic/480x270/p05394v7.jpg" height="75%" width="95%" ></img>
 </body>
 </html>
 
