--- a/index.html
+++ b/index.html
@@ -1,12 +1,26 @@
 <html>
-<head><h1> welcome to my football world</h1></head>
+
+<head> <center> <h1><u><i> welcome to my football world </u> </i> </h1> </center> </head>
+
 <body bgcolor="#4286f4">
-<marquee scrollamount="10"></marquee>
+<marquee scrollamount="10"> <h1> lets start football </h1> </marquee>
+
 <br>
+
 <br>
-<br>
-<img src="https://ichef.bbci.co.uk/images/ic/480x270/p05394v7.jpg" height="75%" width="95%" ></img>
+
+<table>
+<TABLE ALIGN="CENTER"
+<TABLE BORDER="5" TABLE CELLSPACING="10">
+<TR>
+<TD><H3> HELP </H3></TD> <TD> / </TD> <TD><H3> MORE ABOUT ME </H3></TD> <TD> / </TD> <TD><H3> MORE WEBSITES </H3></TD>
+</TR>
+</TABLE>
+
+<center> <img src="https://ichef.bbci.co.uk/images/ic/480x270/p05394v7.jpg" height="67%" width="75%" ></img></center>
+
 </body>
+
 </html>
 
 
