--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <TABLE ALIGN="CENTER"
 <TABLE BORDER="5" TABLE CELLSPACING="10">
 <TR>
-  <TD><H3> <a href="second.html"> HELP </a></H3></TD> <TD> / </TD> <TD><H3> MORE ABOUT ME </H3></TD> <TD> / </TD> <TD><H3> MORE WEBSITES </H3></TD>
+  <TD><a href="second.html"> HELP </a></TD> <TD> / </TD> <TD><H3> MORE ABOUT ME </H3></TD> <TD> / </TD> <TD><H3> MORE WEBSITES </H3></TD>
 </TR>
 </TABLE>
 
