--- a/third.html
+++ b/third.html
@@ -1,6 +1,8 @@
 <html>
 <head> All you need to know about me </head>
-<body>
-bg color="#ea6f54"
+<body bgcolor="#7a55e0"
+<I irst saw my parents on 27th April 2005 and i was born to be a footballer! i was 4 when i started playing football a size of an 35 inch TV!
+ MY FATHER USED TO TEACH ME FOOTBALL SO PROFESSIONALLY THAT FOOTBALL WAS IN MY VEINS.Now knew how i had to play football with aggression,stamina and speed.
+   but suddenly my journey began when i was 7 i got a chance to play for MUMBAI FC,theb best club in india i was overwhelmed.
 </body>
 </html>
